--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     </svg>
                 </div>
                 <div class="buttons">
-                    <button class="signupBtn">SignUp</button>
-                    <button class="loginBtw">Login</button>
+                    <button class="signupBtn">Sign Up</button>
+                    <button class="loginBtn">Log in</button>
                 </div>
             </div>
 
@@ -369,6 +369,11 @@
 
 <!-- card container end here at below div --> 
                 </div>
+
+            <div class="playBar">
+                Play
+            </div>
+
             </div>
         </div>
     </div>
