--- a/index.html
+++ b/index.html
@@ -371,7 +371,18 @@
                 </div>
 
             <div class="playBar">
-                Play
+        <div class="songinfo">
+        
+        </div>
+        <div class="songbuttons">
+            <img src="previous.svg">
+            <img src="play.svg">
+            <img src="nextsong.svg">
+        </div>
+
+        <div class="songtime">
+
+        </div>
             </div>
 
             </div>
